# rally

./: .gitignore  AGENTS.md  Dockerfile  MIGRATIONS.md  README.md  agent_voice.txt.example  config.toml.example  context.txt.example  devenv.nix  devenv.yaml  entrypoint.sh  migrate_add_dinner_plan_assignees.py  migrate_add_due_date.py  migrate_add_family_members.py  migrate_add_recurring_todos.py  migrate_add_reminder_window.py  migrate_add_settings.py  pyproject.toml  run_migrations.py
.github/: FUNDING.yml  pull_request_template.md
.github/workflows/: container.yml  tests.yml
migrations/: migrate_011_add_meal_reviews.py  migrate_012_add_ai_settings_history.py  migrate_014_configurable_nws_weather.py  migrate_015_add_llm_settings_history.py  migrate_016_add_stem_concept_history.py  migrate_add_caldav_support.py  migrate_add_completed_at.py  migrate_add_custom_recurrence.py  migrate_add_dinner_plan_assignees.py  migrate_add_due_date.py  migrate_add_family_members.py  migrate_add_last_generated_date.py  migrate_add_meal_type.py  migrate_add_recurring_todos.py  migrate_add_reminder_window.py  migrate_add_settings.py  run_migrations.py
src/rally/: __init__.py  caldav_client.py  cli.py  database.py  main.py  models.py  recurrence.py  schemas.py
src/rally/generator/: __init__.py  __main__.py  generate.py
src/rally/routers/: __init__.py  dashboard.py  dinner_planner.py  family.py  recurring_todos.py  settings.py  todos.py
src/rally/utils/: __init__.py  static_version.py  timezone.py
static/: styles.css
templates/: dashboard.html  dinner_planner.html  family.html  meal_history.html  settings.html  styles.css  todo.html  todo_completed.html
tests/: conftest.py  test_caldav_client.py  test_cli.py  test_completed_todos.py  test_connectivity.py  test_dashboard.py  test_dinner_planner.py  test_family.py  test_generate.py  test_generate_helpers.py  test_generate_llm.py  test_harness.py  test_pages.py  test_recurrence.py  test_recurring_todos.py  test_settings.py  test_todos.py  test_utils.py
