[project]
name = "rally"
version = "0.1.0"
description = "Your family command center—coordinate, work hard, and make the most of every day."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "anthropic>=0.39.0",
    "fastapi[standard]>=0.115.0",
    "requests>=2.32.0",
    "ruff>=0.8.0",
    "sqlalchemy>=2.0.25",
    "pydantic>=2.6.0",
    "jinja2>=3.1.3",
    "icalendar>=6.0.0",
]

[project.scripts]
seed = "rally.cli:seed"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
