[project]
name = "rally"
version = "0.1.0"
description = "Your family command center—coordinate, work hard, and make the most of every day."
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "openai>=2.21.0",
    "fastapi[standard]>=0.129.0",
    "requests>=2.32.5",
    "ruff>=0.15.1",
    "sqlalchemy>=2.0.46",
    "pydantic>=2.12.5",
    "jinja2>=3.1.6",
    "icalendar>=7.0.0",
    "recurring-ical-events>=2.0.2",
]

[project.scripts]
seed = "rally.cli:seed"

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "UP",  # pyupgrade
]
ignore = [
    "E501",  # line too long (handled by formatter)
    "B008",  # function call in argument defaults (FastAPI Depends pattern)
]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
